# cheeza

./: .gitignore  LICENSE  README.md  summary.md
.github/workflows/: ci.yml  windows-release.yml  windows-smoke.yml
app/: package-lock.json  package.json
app/src/: App.css  App.tsx  index.css  media.ts  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: audio.rs  captions.rs  lib.rs  main.rs  media.rs  models.rs  project.rs  recorder.rs  render.rs  scope_access.rs  speech.rs  tools.rs
app/src/store/: project.ts
workers/: speech_worker.py
