[package]
name = "cheeza"
version = "0.1.0"
description = "Script-driven narration and visual presentation studio"
authors = ["Cheeza Contributors"]
license = "AGPL-3.0-only"
repository = "https://github.com/Makumiii/cheeza"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cheeza_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
anyhow = "1.0.103"
thiserror = "2.0.18"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
sha2 = "0.10.9"
hex = "0.4.3"
